--- a/ClassesExercises/WpfApp1/MainWindow.xaml
+++ b/ClassesExercises/WpfApp1/MainWindow.xaml
@@ -13,7 +13,7 @@
             <ColumnDefinition Width="42*"/>
             <ColumnDefinition Width="735*"/>
         </Grid.ColumnDefinitions>
-        <Image HorizontalAlignment="Left" Height="290" Margin="302,0,0,0" VerticalAlignment="Top" Width="433" Source="C:\Users\TECH-W96birm\Documents\ExercisesBasics\ClassesExercises\WpfApp1\Radio.jpg" Grid.Column="3"/>
+        <Image HorizontalAlignment="Left" Height="290" Margin="299,0,0,0" VerticalAlignment="Top" Width="433" Source="Radio.jpg" Grid.Column="3"/>
         <Button x:Name="Switch" Content="Off" HorizontalAlignment="Left" Margin="24,54,0,0" VerticalAlignment="Top" Height="47" Width="123" Click="offButton" Grid.Column="2" Grid.ColumnSpan="2"/>
         <Button x:Name="On" Content="On" HorizontalAlignment="Left" Margin="24,173,0,0" VerticalAlignment="Top" Height="42" Width="123" Click="onButton" Grid.Column="2" Grid.ColumnSpan="2"/>
         <TextBox x:Name="RadioOff" HorizontalAlignment="Left" Margin="24,125,0,0" Text="Radio is off" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.Column="2" Grid.ColumnSpan="2"/>
