--- a/ClassesExercises/WpfApp1/MainWindow.xaml
+++ b/ClassesExercises/WpfApp1/MainWindow.xaml
@@ -13,7 +13,7 @@
             <ColumnDefinition Width="42*"/>
             <ColumnDefinition Width="735*"/>
         </Grid.ColumnDefinitions>
-        <Image HorizontalAlignment="Left" Height="290" Margin="299,0,0,0" VerticalAlignment="Top" Width="433" Source="Radio.jpg" Grid.Column="3"/>
+        <Image HorizontalAlignment="Left" Height="330" Margin="236,0,0,0" VerticalAlignment="Top" Width="496" Source="Radio.jpg" Grid.Column="3"/>
         <Button x:Name="Switch" Content="Off" HorizontalAlignment="Left" Margin="24,54,0,0" VerticalAlignment="Top" Height="47" Width="123" Click="offButton" Grid.Column="2" Grid.ColumnSpan="2"/>
         <Button x:Name="On" Content="On" HorizontalAlignment="Left" Margin="24,173,0,0" VerticalAlignment="Top" Height="42" Width="123" Click="onButton" Grid.Column="2" Grid.ColumnSpan="2"/>
         <TextBox x:Name="RadioOff" HorizontalAlignment="Left" Margin="24,125,0,0" Text="Radio is off" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.Column="2" Grid.ColumnSpan="2"/>
@@ -21,6 +21,8 @@
         <Button Content="Channel 2" HorizontalAlignment="Left" Margin="53,235,0,0" VerticalAlignment="Top" Height="40" Width="84" Click="channel_2" Grid.Column="3"/>
         <Button Content="Channel 3" HorizontalAlignment="Left" Margin="0,290,0,0" VerticalAlignment="Top" Height="40" Width="84" Click="channel_3" Grid.Column="1" Grid.ColumnSpan="3"/>
         <Button Content="Channel 4" HorizontalAlignment="Left" Margin="53,290,0,0" VerticalAlignment="Top" Height="40" Width="84" Click="channel_4" Grid.Column="3"/>
+        <Button Content="Volume Down" Grid.Column="3" HorizontalAlignment="Left" Margin="53,350,0,0" VerticalAlignment="Top" Height="36" Width="84" Click="Button_Click_1"/>
+        <Button Content="Volume Up" Grid.Column="1" HorizontalAlignment="Left" Margin="2,350,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3" Height="36" Width="80" Click="Button_Click"/>
 
 
 
