--- a/ClassesExercises/WpfApp1/MainWindow.xaml
+++ b/ClassesExercises/WpfApp1/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
-        Closing="Window_Closing"
+        Closing="Window_Closing"  
         >
 
     <Grid>
@@ -26,7 +26,7 @@
         <Button Content="Channel 4" HorizontalAlignment="Left" Margin="53,290,0,0" VerticalAlignment="Top" Height="40" Width="84" Click="channel_4" Grid.Column="3"/>
         <Button Content="Volume Down" Grid.Column="3" HorizontalAlignment="Left" Margin="53,350,0,0" VerticalAlignment="Top" Height="36" Width="84" Click="Volume_down"/>
         <Button Content="Volume Up" Grid.Column="1" HorizontalAlignment="Left" Margin="2,350,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3" Height="36" Width="80" Click="Volume_Up"/>
-        <TextBox x:Name="Volume" Grid.Column="3" HorizontalAlignment="Left" Margin="168,354,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Height="28" TextChanged="Volume_TextChanged"/>
+        <TextBox x:Name="Volume" Grid.Column="3" HorizontalAlignment="Left" Margin="168,354,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Height="28" />
 
 
 
