--- a/ClassesExercises/WpfApp1/MainWindow.xaml
+++ b/ClassesExercises/WpfApp1/MainWindow.xaml
@@ -28,7 +28,7 @@
         <Button Content="Volume Up" Grid.Column="1" HorizontalAlignment="Left" Margin="2,350,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3" Height="36" Width="80" Click="Volume_Up"/>
         <TextBox x:Name="Volume" Grid.Column="3" HorizontalAlignment="Left" Margin="168,354,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Height="28" />
 
-
+        <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="mediaElement1" VerticalAlignment="Top" />
 
     </Grid>
 
